[package]
name = "web-plot-digitizer"
version = "0.1.0"
authors = ["Jake O`Shannessy <joshannessy@affinity-eng.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
data-vector = { git = "https://github.com/JakeOShannessy/data-vector.git" }
rand = "0.7.3"
